got items from json file, display data, added slider navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,56 @@
     <head>
         <meta charset="utf-8">
         <title>PreviewsWorld Catalog Viewer</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="script/jquery.mobile.custom.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="script/script.js"></script>
     </head>
     <body>
+        <div class="container-fluid">
+            <nav class="navbar navbar-default"></nav>
+            <header class="navbar navbar-default navbar-fixed-top col-sm-12">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" >
+                                <span class="glyphicon glyphicon-filter"></span>
+                            </button>
+                            <a class="navbar-brand" href="/">COMICCIONADO</a>
+                        </div>
+                        <div class="collapse navbar-collapse" id="myNavbar">
+                            <ul id="myNavbar"class="nav navbar-nav navbar-right">
+                                <li>
+                                    <a href="#itemCarousel" role="button" data-slide="prev">
+                                        <span class="glyphicon glyphicon-chevron-left"></span>Prev
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#itemCarousel" role="button" data-slide="next">Next
+                                        <span class="glyphicon glyphicon-chevron-right"></span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"><span class="glyphicon glyphicon-filter"></span>Filter</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+            </header>
+            <main>
+                <div id="itemCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+                    <div class="carousel-inner" role="listbox"></div>
+                </div>
+            </main>
+            <aside>
+                <form>
+                </form>
+            </aside>
+            <footer>
+            </footer>
+        </div>
     </body>
 </html>
+
