--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header class="navbar navbar-default navbar-fixed-top col-sm-12">
                     <div class="container-fluid">
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" >
+                            <button type="button" class="navbar-toggle" data-toggle="modal" data-target="#myModal">
                                 <span class="glyphicon glyphicon-filter"></span>
                             </button>
                             <a class="navbar-brand" href="/">COMICCIONADO</a>
@@ -35,7 +35,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"><span class="glyphicon glyphicon-filter"></span>Filter</a>
+                                    <a type="button"  data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-filter"></span>Filter</a>
                                 </li>
                             </ul>
                         </div>
@@ -46,9 +46,36 @@
                     <div class="carousel-inner" role="listbox"></div>
                 </div>
             </main>
-            <aside>
-                <form>
-                </form>
+            <aside id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Filter items</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="title">Title</label>
+                                    <input type="text" class="form-control" id="title">
+                                </div>
+                                <div class="form-group">
+                                    <label for="publisher">Publisher</label>
+                                    <select class="form-control" id="publisher"></select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="srp">Price</label>
+                                    <select class="form-control" id="srp"></select>
+                                </div>
+                                <button type="submit" class="btn btn-default">Filter</button>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <p><span id="totalItems">0</span> items displayed</p>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
             </aside>
             <footer>
             </footer>
