used to owl carousel

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
         <meta charset="utf-8">
         <title>PreviewsWorld Catalog Viewer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="owl-carousel/owl.carousel.css">
+        <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="script/jquery.mobile.custom.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="owl-carousel/owl.carousel.js"></script>
         <script src="script/script.js"></script>
     </head>
     <body>
@@ -20,17 +24,17 @@
                             <button type="button" class="navbar-toggle" data-toggle="modal" data-target="#myModal">
                                 <span class="glyphicon glyphicon-filter"></span>
                             </button>
-                            <a class="navbar-brand" href="/">COMICCIONADO</a>
+                            <a class="navbar-brand" href="/">PreviewsWorld Catalog Viewer</a>
                         </div>
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul id="myNavbar"class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a href="#itemCarousel" role="button" data-slide="prev">
+                                    <a class ="prev" role="button" data-slide="prev">
                                         <span class="glyphicon glyphicon-chevron-left"></span>Prev
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#itemCarousel" role="button" data-slide="next">Next
+                                    <a  class ="next" role="button" data-slide="next">Next
                                         <span class="glyphicon glyphicon-chevron-right"></span>
                                     </a>
                                 </li>
@@ -42,9 +46,7 @@
                     </div>
             </header>
             <main>
-                <div id="itemCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
-                    <div class="carousel-inner" role="listbox"></div>
-                </div>
+                <div id="owl-example" class="owl-carousel col-sm-12"></div>
             </main>
             <aside id="myModal" class="modal fade" role="dialog">
                 <div class="modal-dialog">
@@ -67,8 +69,8 @@
                                     <label for="srp">Price</label>
                                     <select class="form-control" id="srp"></select>
                                 </div>
-                                <button type="submit" class="btn btn-default">Filter</button>
                             </form>
+                            <button class="btn btn-default" id="filterBtn">Filter</button>
                         </div>
                         <div class="modal-footer">
                             <p><span id="totalItems">0</span> items displayed</p>
@@ -82,4 +84,3 @@
         </div>
     </body>
 </html>
-
