moved owl-carousel to script folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="owl-carousel/owl.carousel.js"></script>
+        <script src="/script/owl-carousel/owl.carousel.js"></script>
         <script src="script/script.js"></script>
     </head>
     <body>
@@ -70,7 +70,7 @@
                                     <select class="form-control" id="srp"></select>
                                 </div>
                             </form>
-                            <button class="btn btn-default" id="filterBtn">Filter</button>
+                            <button class="btn btn-default" id="filter">Filter</button>
                         </div>
                         <div class="modal-footer">
                             <p><span id="totalItems">0</span> items displayed</p>
