--- a/index.html
+++ b/index.html
@@ -2,29 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>PreviewsWorld Catalog Viewer</title>
+        <title>Comiccionado - PreviewsWorld Catalog Viewer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" type="text/css" href="/script/slick/slick.css"/>
         <link rel="stylesheet" type="text/css" href="/script/slick/slick-theme.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="script/slick/slick.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
         <script src="script/script.js"></script>
     </head>
     <body>
         <div class="container-fluid">
             <nav class="navbar navbar-default"></nav>
-            <header class="navbar navbar-default navbar-fixed-top col-sm-12">
+            <header class="navbar navbar-inverse navbar-fixed-top col-sm-12">
                     <div class="container-fluid">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="modal" data-target="#myModal">
                                 <span class="glyphicon glyphicon-filter"></span>
                             </button>
-                            <a class="navbar-brand" href="/">PreviewsWorld Catalog Viewer</a>
+                            <a class="navbar-brand" href="/">Comiccionado</a>
                         </div>
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul id="myNavbar"class="nav navbar-nav navbar-right">
@@ -65,7 +67,6 @@
                             <button class="btn btn-default" id="filter">Filter</button>
                         </div>
                         <div class="modal-footer">
-                            <p><span id="totalItems">0</span> items displayed</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </div>
