--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="style/style.css">
-        <link rel="stylesheet" type="text/css" href="/script/slick/slick.css"/>
-        <link rel="stylesheet" type="text/css" href="/script/slick/slick-theme.css"/>
+        <link rel="stylesheet" type="text/css" href="script/slick/slick.css"/>
+        <link rel="stylesheet" type="text/css" href="script/slick/slick-theme.css"/>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
