--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </div>
             </header>
             <main>
+                <div class="loader"></div>
                 <div class="carousel col-sm-12"></div>
             </main>
             <aside id="myModal" class="modal fade" role="dialog">
